--- a/Face Detection/Face detection.ipynb
+++ b/Face Detection/Face detection.ipynb
@@ -1,60 +1,102 @@
-import cv2
-from matplotlib import pyplot as plt
-
-# Load the Haar Cascade for face detection
-cascade_classifier = cv2.CascadeClassifier(cv2.data.haarcascades + "haarcascade_frontalface_default.xml")
-# This loads a pre-trained face detection model using Haar Cascades. It detects frontal faces.
-
-# Initialize video capture
-cap = cv2.VideoCapture(0)
-# This connects to the default camera (index 0) to start capturing video.
-
-plt.ion()  # Enable interactive mode to update images in real-time
-# Enables Matplotlib's interactive mode so the image display updates without blocking program execution.
-
-while True:  # Start an infinite loop to capture and process frames continuously.
-    ret, frame = cap.read()
-    # Capture a single frame from the webcam.
-    # `ret` is a boolean: True if a frame is captured successfully, False otherwise.
-    # `frame` contains the captured image data.
-
-    if not ret:  # If the frame capture fails, exit the loop.
-        break
-
-    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)
-    # Converts the captured frame from BGR color format to grayscale.
-    # Grayscale images are simpler and faster for face detection.
-
-    faces = cascade_classifier.detectMultiScale(gray, scaleFactor=1.1, minNeighbors=4)
-    # Detects faces in the grayscale image using the Haar Cascade.
-    # `scaleFactor`: Reduces the image size step-by-step to detect faces at different scales.
-    # `minNeighbors`: Minimum number of nearby rectangles needed to confirm a face.
-
-    for (x, y, w, h) in faces:
-        # Loop through each detected face. Each face is represented by its rectangle's coordinates:
-        # `x`, `y`: Top-left corner of the rectangle.
-        # `w`, `h`: Width and height of the rectangle.
-        cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)
-        # Draws a rectangle around the detected face on the original frame.
-        # `(255, 0, 0)`: Blue color for the rectangle in BGR format.
-        # `2`: Thickness of the rectangle.
-
-    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)
-    # Converts the frame from BGR (OpenCV's default) to RGB for Matplotlib to display correctly.
-
-    plt.imshow(frame_rgb)  # Displays the current frame as an image.
-    plt.axis('off')  # Hides the axis around the image for a cleaner display.
-    plt.pause(0.001)  # Pauses for 1 millisecond to allow the display to update.
-    plt.clf()  # Clears the Matplotlib display so the next frame can replace it.
-
-    if cv2.waitKey(1) & 0xFF == ord('q'):
-        # Waits 1 millisecond for a key press.
-        # If the user presses the 'q' key, exit the loop.
-        break
-
-# Release the capture and close all windows
-cap.release()
-# Releases the webcam resource so it can be used by other programs.
-
-plt.close()  # Closes the Matplotlib window.
-# Cleans up and exits the program gracefully.
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43c8024f-f529-4d6a-b9c0-11183830c125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# Load the Haar Cascade for face detection\n",
+    "cascade_classifier = cv2.CascadeClassifier(cv2.data.haarcascades + \"haarcascade_frontalface_default.xml\")\n",
+    "# This loads a pre-trained face detection model using Haar Cascades. It detects frontal faces.\n",
+    "\n",
+    "# Initialize video capture\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "# This connects to the default camera (index 0) to start capturing video.\n",
+    "\n",
+    "plt.ion()  # Enable interactive mode to update images in real-time\n",
+    "# Enables Matplotlib's interactive mode so the image display updates without blocking program execution.\n",
+    "\n",
+    "while True:  # Start an infinite loop to capture and process frames continuously.\n",
+    "    ret, frame = cap.read()\n",
+    "    # Capture a single frame from the webcam.\n",
+    "    # `ret` is a boolean: True if a frame is captured successfully, False otherwise.\n",
+    "    # `frame` contains the captured image data.\n",
+    "\n",
+    "    if not ret:  # If the frame capture fails, exit the loop.\n",
+    "        break\n",
+    "\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    # Converts the captured frame from BGR color format to grayscale.\n",
+    "    # Grayscale images are simpler and faster for face detection.\n",
+    "\n",
+    "    faces = cascade_classifier.detectMultiScale(gray, scaleFactor=1.1, minNeighbors=4)\n",
+    "    # Detects faces in the grayscale image using the Haar Cascade.\n",
+    "    # `scaleFactor`: Reduces the image size step-by-step to detect faces at different scales.\n",
+    "    # `minNeighbors`: Minimum number of nearby rectangles needed to confirm a face.\n",
+    "\n",
+    "    for (x, y, w, h) in faces:\n",
+    "        # Loop through each detected face. Each face is represented by its rectangle's coordinates:\n",
+    "        # `x`, `y`: Top-left corner of the rectangle.\n",
+    "        # `w`, `h`: Width and height of the rectangle.\n",
+    "        cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "        # Draws a rectangle around the detected face on the original frame.\n",
+    "        # `(255, 0, 0)`: Blue color for the rectangle in BGR format.\n",
+    "        # `2`: Thickness of the rectangle.\n",
+    "\n",
+    "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    # Converts the frame from BGR (OpenCV's default) to RGB for Matplotlib to display correctly.\n",
+    "\n",
+    "    plt.imshow(frame_rgb)  # Displays the current frame as an image.\n",
+    "    plt.axis('off')  # Hides the axis around the image for a cleaner display.\n",
+    "    plt.pause(0.001)  # Pauses for 1 millisecond to allow the display to update.\n",
+    "    plt.clf()  # Clears the Matplotlib display so the next frame can replace it.\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        # Waits 1 millisecond for a key press.\n",
+    "        # If the user presses the 'q' key, exit the loop.\n",
+    "        break\n",
+    "\n",
+    "# Release the capture and close all windows\n",
+    "cap.release()\n",
+    "# Releases the webcam resource so it can be used by other programs.\n",
+    "\n",
+    "plt.close()  # Closes the Matplotlib window.\n",
+    "# Cleans up and exits the program gracefully.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "459143ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
